--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -62,26 +62,10 @@ x86-64 or ARM64 +
 a| * macOS 14 Sonoma
 * macOS 13 Ventura
 * macOS 12 Monterey
-* macOS 11 Big Sur
-* macOS 10.15 Catalina
 
 a| *Linux* +
 (x86-64)
-a| * Debian
-** Debian 12
-** Debian 11
-* Fedora
-** Fedora 39
-** Fedora 38
-** Fedora 37
-* openSUSE Leap
-** openSUSE Leap 15.5
-** openSUSE Leap 15.4
-* Ubuntu
-** Ubuntu 23.10
-** Ubuntu 23.04
-** Ubuntu 22.04 LTS
-* An **xref:appimage[AppImage]** build of the ownCloud Desktop App is available to support more Linux platforms
+a| * The **xref:appimage[AppImage]** build of the ownCloud Desktop App is available to support most Linux platforms
 |===
 
 NOTE: For Linux distributions, we support, if technically feasible, the latest 2 versions per platform and the previous Ubuntu {ubuntu-lts-url}[LTS].
