--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -10,6 +10,10 @@ include::partial$conditional_naming.adoc[]
 
 {description} The app is available for *Windows*, *macOS*, and various *Linux* distributions.
 
+== Compatiblility
+
+NOTE: Starting with {ini_name} version 7.0, the Desktop App no longer supports ownCloud server but only ownCloud Intinite Scale. To use the Desktop App with ownCloud server, please use version 6.0 or higher.
+
 == Key Benefits
 
 The Desktop App enables you to:
