--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -16,12 +16,11 @@ endif::[]
 ** xref:troubleshooting.adoc[Troubleshooting]
 ** xref:faq.adoc[FAQ]
 
-** Advanced Usage
-*** xref:advanced_usage/configuration_file.adoc[Configuration File]
-
 ifeval::["{targetbuild}" == "oc"]
+** Advanced Usage
 *** xref:advanced_usage/environment_variables.adoc[Environment Variables]
 *** xref:advanced_usage/low_disk_space.adoc[Low Disk Space]
+endif::[]
 
 * Deployment Guide
 ** xref:installing.adoc[Installing or Deploying]
