--- a/modules/ROOT/pages/system_configuration.adoc
+++ b/modules/ROOT/pages/system_configuration.adoc
@@ -1,55 +1,60 @@
 = System Configuration
-:page-role: admin
-:page-toclevels: 3
+:toc: right
 :description: System-wide configuration options for administrators
 :keywords: system configuration, policies, registry, ini, openid, updater
 
-This page documents the *system-wide configuration options* available to administrators.
-These settings are enforced globally and are not intended to be modified by end users.
+include::partial$conditional_naming.adoc[]
 
-System configuration is evaluated at application startup and overrides user-level settings in most cases.
+== Introduction
 
-== Supported Platforms and Locations}
+This page documents the *system-wide configuration options* available to administrators. These settings are enforced globally and are not intended to be modified by end users.
 
-System configuration is read from different locations depending on the operating system.
+System configuration is evaluated at application start-up and takes precedence over user-level settings in most cases.
+
+== Supported Platforms and Locations
+
+The system configuration is read from different locations depending on the operating system.
 
 === Windows (Registry)
 
-On Windows systems, configuration is read from the system policy registry:
+For Windows systems, the configuration is read from the system policy registry:
 
+[source,plaintext,subs="attributes+,+macros"]
 ----
-HKEY_LOCAL_MACHINE\Software\Policies\{ini_name}\{ini_name}
++HKEY_LOCAL_MACHINE\Software\Policies\+{bin_name}+\+{ini_name}
 ----
 
 === macOS (System Preferences)
 
-On macOS, configuration is read from the system-wide preferences file:
+On macOS, the configuration is read from the system-wide preferences file:
 
+[source,plaintext,subs="attributes+"]
 ----
 /Library/Preferences/{ini_rev_domain}/{ini_name}.ini
 ----
 
-The application must have read access to this directory and file.
+This directory and file must be accessible to the application for reading purposes.
 
 === Linux and Unix-like Systems
 
-On Linux and other Unix-like systems, configuration is read from:
+On Linux and other Unix-like systems, the configuration file is read from:
 
+[source,plaintext,subs="attributes+"]
 ----
-/etc/{ini_name}/{ini_name}.ini
+/etc/{bin_name}/{ini_name}.ini
 ----
 
-The application must have read access to this directory and file.
+This directory and file must be accessible to the application for reading purposes.
 
 == Configuration File Format
 
-On macOS, Linux, and Unix-like systems, the configuration file uses the INI format.
+The configuration file uses the `INI` format on macOS, Linux and Unix-like systems.
 
 .Example: `/etc/owncloud/owncloud.ini`
-[source,ini]
+[source,ini,subs="attributes+"]
 ----
 [Setup]
-ServerUrl=https://cloud.example.com
+ServerUrl=<https://cloud.example.com>
 AllowServerUrlChange=false
 MoveToTrash=true
 
@@ -57,8 +62,8 @@ MoveToTrash=true
 SkipUpdateCheck=true
 
 [OpenIDConnect]
-ClientId=your-client-id
-ClientSecret=your-client-secret
+ClientId=<your-client-id>
+ClientSecret=<your-client-secret>
 Ports=8080,8443
 Scopes=openid offline_access email profile
 Prompt=select_account consent
@@ -66,32 +71,34 @@ Prompt=select_account consent
 
 == Windows Registry Configuration
 
-The same settings can be applied on Windows using registry policies.
+These settings can also be applied in Windows via registry policies.
 
 .Example: `owncloud.reg`
-[source,registry]
+[source,registry,subs="attributes+,+macros"]
 ----
 Windows Registry Editor Version 5.00
 
-[HKEY_LOCAL_MACHINE\Software\Policies\ownCloud\ownCloud]
++[HKEY_LOCAL_MACHINE\Software\Policies\+{bin_name}+\+{ini_name}]
 
-[HKEY_LOCAL_MACHINE\Software\Policies\ownCloud\ownCloud\Setup]
-"ServerUrl"="https://cloud.example.com"
++[HKEY_LOCAL_MACHINE\Software\Policies\+{bin_name}+\+{ini_name}+\Setup+]
+"ServerUrl"="\<https://cloud.example.com>"
 "AllowServerUrlChange"=dword:00000000
 "MoveToTrash"=dword:00000001
 
-[HKEY_LOCAL_MACHINE\Software\Policies\ownCloud\ownCloud\Updater]
+ifeval::["{targetbuild}" == "oc"]
++[HKEY_LOCAL_MACHINE\Software\Policies\+{bin_name}+\+{ini_name}+\Updater+]
 "SkipUpdateCheck"=dword:00000001
 
-[HKEY_LOCAL_MACHINE\Software\Policies\ownCloud\ownCloud\OpenIDConnect]
-"ClientId"="your-client-id"
-"ClientSecret"="your-client-secret"
+endif::[]
++[HKEY_LOCAL_MACHINE\Software\Policies\+{bin_name}+\+{ini_name}+\OpenIDConnect+]
+"ClientId"="<your-client-id>"
+"ClientSecret"="<your-client-secret>"
 "Ports"="8080,8443"
 "Scopes"="openid offline_access email profile"
 "Prompt"="select_account consent"
 ----
 
-Boolean registry values use `DWORD`:
+Boolean registry values use `DWORD` where:
 
 * `0` = disabled
 * `1` = enabled
@@ -100,7 +107,7 @@ Boolean registry values use `DWORD`:
 
 === Setup
 
-Controls initial application behavior and server enforcement.
+These keys control the initial application behaviour and server enforcement.
 
 [cols="1,3,1,1", options="header"]
 |===
@@ -125,9 +132,10 @@ Controls initial application behavior and server enforcement.
 | true
 |===
 
+ifeval::["{targetbuild}" == "oc"]
 === Updater
 
-Controls update behavior at a global level.
+These keys control the behaviour of the update at a global level.
 
 [cols="1,3,1,1", options="header"]
 |===
@@ -141,13 +149,14 @@ Controls update behavior at a global level.
 | Boolean
 | false
 |===
+endif::[]
 
 === OpenID Connect
 
-Defines OpenID Connect (OIDC) authentication parameters.
-If this section is present, the application uses these values for authentication flows.
+These keys define the OpenID Connect (OIDC) authentication parameters.
+If this section is present, the application will use these values for authentication purposes.
 
-All keys need to be defined for the OpenID Connect configuration to be valid.
+For the OpenID Connect configuration to be valid, all keys must be defined.
 
 [cols="1,3,1,1", options="header"]
 |===
@@ -190,6 +199,5 @@ All keys need to be defined for the OpenID Connect configuration to be valid.
 == Troubleshooting
 
 * Verify file permissions on Unix systems (`/etc/{ini_name}` must be readable).
-* On Windows, ensure keys are defined under `HKLM\Software\Policies`.
+* On Windows, ensure that keys are defined under `HKLM\Software\Policies`.
 * Confirm that branding or theme settings do not mask the expected configuration path.
-
